--- a/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -4,15 +4,15 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo’i
-                                        gzungs</title>
-                                <title type="mainTitle" xml:lang="bo">ལྷ་མོ་ནག་མོ་ཆེན་མོའི་གཟུངས།</title>
                                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Devī
                                         Mahākālī</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Devī­mahākālī­nāma­dhāraṇī</title>
+                                <title type="mainTitle" xml:lang="bo">ལྷ་མོ་ནག་མོ་ཆེན་མོའི་གཟུངས།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo’i
+                                        gzungs</title>
+                                <title type="otherTitle" xml:lang="Sa-Ltn">mahākālī­dhāraṇī</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">nag mo chen mo’i
                                         gzungs/</title>
-                                <title type="otherTitle" xml:lang="Sa-Ltn">mahākālī­dhāraṇī</title>
                                 <author role="translatorMain" xml:id="UT22084-091-067-1">Dharmachakra Translation Committee</author>
                                 <consultant role="projectManager" xml:id="UT22084-091-067-2">Andreas
                                         Doctor</consultant>
@@ -30,9 +30,11 @@
                                         FitzHerbert</editor>
                                 <editor role="TEImarkupEditor" xml:id="UT22084-091-067-48">Martina
                                         Cotter</editor>
+                                <editor role="finalReviewer" xml:id="UT22084-091-067-142">Andreas
+                                        Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.17 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -41,7 +43,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
                                                 according to Vajrayāna Buddhist tradition there are
@@ -67,7 +69,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2023-09-09</date>
+                                <date>2023-11-17</date>
                         </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh670" type="text">
@@ -172,11 +174,20 @@
                                         <desc>Several fixes through all section made during Gomde
                                                 meeting.</desc>
                                 </change>
-                <change who="#line-tofte" when="2023-10-27T07:59:41.404Z" type="translation-status" status="2" xml:id="UT22084-091-067-131">
-                    <desc>2</desc>
+                                <change who="#line-tofte" when="2023-10-27T07:59:41.404Z" type="translation-status" status="2" xml:id="UT22084-091-067-131">
+                                        <desc>2</desc>
+                                </change>
+                                <change who="#line-tofte" when="2023-10-27T07:59:41.404Z" type="text-version" status="0.1.17" xml:id="UT22084-091-067-132">
+                                        <desc>Auto (update-publication-status)</desc>
+                                </change>
+                                <change who="#line-tofte" when="2023-10-31T08:33:35.365Z" type="text-version" status="0.1.18" xml:id="UT22084-091-067-143">
+                                        <desc>Auto (update-contributors)</desc>
+                                </change>
+                <change who="#martina-cotter" when="2023-11-17T13:06:10.675Z" type="translation-status" status="1.a" xml:id="UT22084-091-067-144">
+                    <desc>1.a</desc>
                 </change>
-                <change who="#line-tofte" when="2023-10-27T07:59:41.404Z" type="text-version" status="0.1.17" xml:id="UT22084-091-067-132">
-                    <desc>Auto (update-publication-status)</desc>
+                <change who="#martina-cotter" when="2023-11-17T13:06:10.675Z" type="text-version" status="1.0.0" xml:id="UT22084-091-067-145">
+                    <desc>First published version</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -323,7 +334,7 @@
                                         <p tid="22">Devī Mahākālī then addressed the Blessed One,
                                                 saying, ‘Honorable One, were I to offer this vidyā
                                                 in homage at the Blessed One’s feet, would the
-                                                Blessed One please accept my vidyā?<note place="end" xml:id="UT22084-091-067-69"> D and S:
+                                                Blessed One please accept my vidyā?’<note place="end" xml:id="UT22084-091-067-69"> D and S:
                                                   <foreign xml:lang="Bo-Ltn" type="quote">bdag gi
                                                   de</foreign>. The Tibetan only has a pronoun here.
                                                   The term <foreign xml:lang="Sa-Ltn" type="term">vidyā</foreign> has been added to the English
@@ -352,9 +363,9 @@
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-74"/>
                                         <p tid="26">By pronouncing this vidyā, may all fevers,
-                                                illnesses, plagues, and humoral disorders, as well as
-                                                all illnesses such as leprosy, boils, skin rashes,
-                                                and the like, be cured! <mantra xml:lang="Sa-Ltn" type="syllable">Svāhā</mantra>.</p>
+                                                illnesses, plagues, and humoral disorders, as well
+                                                as all illnesses such as leprosy, boils, skin
+                                                rashes, and the like, be cured! <mantra xml:lang="Sa-Ltn" type="syllable">Svāhā</mantra>.’</p>
                                         <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-75"/>
                                         <trailer tid="27">This concludes “<title xml:lang="en">The
@@ -518,6 +529,7 @@
                                                   <term xml:lang="Bo-Ltn" status="verified" n="1">nyes pa </term>
                                                   <term xml:lang="bo" n="1">ཉེས་པ།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">doṣa</term>
+                                                <term type="translationAlternative">humoral disorder</term>
                                                   <note type="definition">
                                 <p>Literally a “fault,”
                                                   this term signifies a wide range of health
@@ -568,7 +580,13 @@
                                                   <term xml:lang="Sa-Ltn" status="verified"/>
                                                   <note type="definition">
                                 <p>An epithet for Devī
-                                                  Mahākālī.</p>
+                                                  Mahākālī. According to <title xml:lang="en">The
+                                                  Tantra of the Flaming Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842), Śrīdevī Mahākālī prays that in
+                                                  her next life she may meet the Buddha and become
+                                                  the sovereign goddess of the desire realm. When
+                                                  this becomes reality, she becomes known as
+                                                  “Sovereign Goddess of the Desire
+                                                  Realm‍.”</p>
                             </note>
                                                 </gloss>
                     </item>
@@ -581,7 +599,11 @@
                                                   <term xml:lang="Sa-Ltn" status="verified"/>
                                                   <note type="definition">
                                 <p>An epithet for Devī
-                                                  Mahākālī.</p>
+                                                  Mahākālī. According to <title xml:lang="en">The
+                                                  Tantra of the Flaming Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842), Śrīdevī Mahākālī was at one point
+                                                  tricked into marriage with the rākṣasa king
+                                                  Daśagrīva and so becomes known as “Wife of the
+                                                  Demon.”</p>
                             </note>
                                                 </gloss>
                     </item>
@@ -593,7 +615,12 @@
                                                   <term xml:lang="Sa-Ltn" status="verified"/>
                                                   <note type="definition">
                                 <p>An epithet for Devī
-                                                  Mahākālī.</p>
+                                                          Mahākālī. According to <title xml:lang="en">The Tantra of the Flaming
+                                                                  Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842), Śrīdevī Mahākālī was originally
+                                                  born as a divine girl called Red Cāmuṇḍī. Her
+                                                  father was Mahādeva, her mother was Umadevī, and
+                                                  her brother at that time was called Yama Mahākāla.
+                                                  Hence, she is “Yama’s Sister.”</p>
                             </note>
                                                 </gloss>
                     </item>
@@ -612,8 +639,7 @@
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-091-067-118">
-                                                  <term type="translationMain">Heaven of Controlling
-                                                  Pleasures Magically Emanated by Others</term>
+                                                <term type="translationMain">Heaven of Controlling the Emanations of Others</term>
                                                   <term xml:lang="Bo-Ltn" status="verified" n="1">gzhan ’phrul dbang byed </term>
                                                   <term xml:lang="bo" n="1">གཞན་འཕྲུལ་དབང་བྱེད།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified" type="attestedOther">para­nirmitavaśavartin</term>
