--- a/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
@@ -23,7 +23,7 @@
         <editor role="finalReviewer" xml:id="UT22084-091-064-265">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -156,6 +156,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-17T13:27:26.29Z" type="text-version" status="1.0.0" xml:id="UT22084-091-064-270">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-17T13:35:43.525Z" type="text-version" status="1.0.1" xml:id="UT22084-091-064-271">
+                    <desc>Updated glossary.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -1454,8 +1457,7 @@
               <term type="translationAlternative">The Tantra of the Black Lord</term>
               <note type="definition">
                                 <p>The name of a work in the various recensions of the Kangyur
-                  detailing a number of rites for the deity Mahākāla. See <ptr target="#UT22084-091-064-245"/> for <title xml:lang="en">The Tantra of the Black
-                    Lord</title>. </p>
+                  detailing a number of rites for the deity Mahākāla.</p>
                             </note>
             </gloss>
                     </item>
