--- a/translations/kangyur/translations/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/translations/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-065-154">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -189,6 +189,9 @@
                 <change who="#martina-cotter" when="2023-11-17T13:04:43.807Z" type="text-version" status="1.0.0" xml:id="UT22084-091-065-159">
                     <desc>First published version</desc>
                 </change>
+                <change who="#konchog" when="2023-11-17T14:52:14.904Z" type="text-version" status="1.0.1" xml:id="UT22084-091-065-160">
+                    <desc>Made a couple minor fixes.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -249,7 +252,7 @@
                                         <p tid="11">A Sanskrit version of this text has yet to come
                                                 to light, and it does not appear as an independent
                                                 work in the Chinese canon. It also does not appear
-                                                in the Denkarma and Phangthangma royal Tibetan
+                                                in the Denkarma or Phangthangma royal Tibetan
                                                 catalogs of translated works. The text lacks a
                                                 translators’ colophon, so the historical
                                                 circumstances surrounding its transmission into
@@ -298,7 +301,7 @@
                                                   ti</foreign>. S: <foreign xml:lang="Bo-Ltn" type="quote">gA Na gu te</foreign>.</note> svāhā
                                                   <lb/>namaḥ śrīmahākāla gaṇe gutiśāya <lb/>namo
                                                   yoginaṇīna <lb/> tadyathā | oṃ hile hile kite
-                                                  kiteni cite citeni svāhā.</mantra>
+                                                  kiteni cite citeni svāhā |</mantra>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-065-72"/>
                                         <p tid="28">“Chanting this vidyā will bind all beings who
