--- a/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -34,7 +34,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -189,6 +189,9 @@
                 <change who="#martina-cotter" when="2023-11-17T13:06:10.675Z" type="text-version" status="1.0.0" xml:id="UT22084-091-067-145">
                     <desc>First published version</desc>
                 </change>
+                <change who="#konchog" when="2023-11-17T15:14:53.372Z" type="text-version" status="1.0.1" xml:id="UT22084-091-067-146">
+                    <desc>One fix: changed single to double quotation marks in the main translation.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -332,16 +335,16 @@
                                                 Blessed One three times and sat to one side. </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-68"/>
                                         <p tid="22">Devī Mahākālī then addressed the Blessed One,
-                                                saying, ‘Honorable One, were I to offer this vidyā
+                                                saying, “THonorable One, were I to offer this vidyā
                                                 in homage at the Blessed One’s feet, would the
-                                                Blessed One please accept my vidyā?’<note place="end" xml:id="UT22084-091-067-69"> D and S:
+                                                Blessed One please accept my vidyā?”<note place="end" xml:id="UT22084-091-067-69"> D and S:
                                                   <foreign xml:lang="Bo-Ltn" type="quote">bdag gi
                                                   de</foreign>. The Tibetan only has a pronoun here.
                                                   The term <foreign xml:lang="Sa-Ltn" type="term">vidyā</foreign> has been added to the English
                                                   translation for clarity. </note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-70"/>
-                                        <p tid="23">The Blessed One replied, ‘Devī Mahākālī—the Wife
+                                        <p tid="23">The Blessed One replied, “TDevī Mahākālī—the Wife
                                                 of the Demon and Yama’s Sister—will bind beings<note place="end" xml:id="UT22084-091-067-71"> The
                                                   objects of Mahākālī’s dhāraṇī are not made
                                                   explicit here, but the close relationship between
@@ -359,13 +362,13 @@
                                         <milestone unit="chunk" xml:id="UT22084-091-067-73"/>
                                         <p rend="mantra" tid="25">
                         <mantra xml:lang="Sa-Ltn">tadyathā | oṃ ruru vitiṣṭha vadhotsi ruru roru
-                                                  vitiṣṭha vadhotsi svāhā </mantra>
+                                                  vitiṣṭha vadhotsi svāhā |</mantra>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-74"/>
                                         <p tid="26">By pronouncing this vidyā, may all fevers,
                                                 illnesses, plagues, and humoral disorders, as well
                                                 as all illnesses such as leprosy, boils, skin
-                                                rashes, and the like, be cured! <mantra xml:lang="Sa-Ltn" type="syllable">Svāhā</mantra>.’</p>
+                                                rashes, and the like, be cured! <mantra xml:lang="Sa-Ltn" type="syllable">Svāhā</mantra>.”</p>
                                         <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-75"/>
                                         <trailer tid="27">This concludes “<title xml:lang="en">The
