--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.0 <date>2023</date>
+                <edition>v 1.1.1 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -229,6 +229,9 @@
                 </change>
                 <change who="#andre" when="2023-11-16T12:52:25.843Z" type="text-version" status="1.1.0" xml:id="UT22084-089-012-4156">
                     <desc>Skt reconstructed names replaced by translations in English and attestations applied</desc>
+                </change>
+                <change who="#celso" when="2023-11-17T22:43:13.191Z" type="text-version" status="1.1.1" xml:id="UT22084-089-012-4157">
+                    <desc>fixed typo</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -10163,7 +10166,7 @@
                     <milestone unit="chunk" xml:id="UT22084-089-012-2054"/>
                     <p tid="1157">Then the brahmin of the Kauṇḍinya family, the Dharma master Vyākaraṇa, through the power of
                         the Bhagavat’s blessing, praised Sarasvatī in front of the great
-                        assembly:<note place="end" xml:id="UT22084-089-012-4085">See note <ptr target="#UT22084-089-012-4083"/>"/&gt; for a discussion of the interpretation of this brahmin’s name.</note>
+                        assembly:<note place="end" xml:id="UT22084-089-012-4085">See note <ptr target="#UT22084-089-012-4083"/> for a discussion of the interpretation of this brahmin’s name.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-2055"/>
                     <lg tid="1158">
