--- a/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
+++ b/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-058-001-3250">Zhou Tian Yu, Chen Yi Qin, Zhou Xun, and Zhao Xuan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.5.22 <date>2023</date>
+                <edition>v 1.5.23 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -252,6 +252,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-17T14:03:04.213Z" type="text-version" status="1.5.22" xml:id="UT22084-058-001-3308">
                     <desc>added links</desc>
+                </change>
+                <change who="#celso" when="2023-11-17T22:47:11.086Z" type="text-version" status="1.5.23" xml:id="UT22084-058-001-3309">
+                    <desc>fixed typo</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -8557,8 +8560,8 @@
                         <gloss type="person" xml:id="UT22084-058-001-2129">
                             <term type="translationMain">Śāriputra</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śāriputra</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sh’a ri’i bu</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཤའ་རིའི་བུ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shA ri’i bu</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཤཱ་རིའི་བུ།</term>
                             <note type="definition">
                                 <p>See Śāradvatīputra.</p>
                             </note>
