--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -5,14 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mi 'jigs pa rab tu sbyin pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvābhayapradā dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sarvābhayapradā dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Confers Fearlessness</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thams cad la mi 'jigs pa rab tu sbyin pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvābhayapradānāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvābhayapradānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thams cad la mi 'jigs pa rab tu sbyin pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvābhayapradānāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvābhayapradānāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +40,19 @@
                     <idno source-id="O1JC114941JC12687" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:34:11.076Z" user="celso">23/09/2021 17:34:11</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-006-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-20T08:18:57.442Z" type="translation-status" status="3" xml:id="UT22084-091-006-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-20T08:18:57.442Z" type="text-version" status="0.0.1" xml:id="UT22084-091-006-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
