--- a/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
@@ -23,7 +23,7 @@
         <editor role="finalReviewer" xml:id="UT22084-091-064-265">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -166,6 +166,9 @@
                 <change who="#konchog" when="2023-11-17T14:41:53.677Z" type="text-version" status="1.0.3" xml:id="UT22084-091-064-274">
                     <desc>Several minor fixes throughout.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-11-20T11:37:40.687Z" type="text-version" status="1.0.4" xml:id="UT22084-091-064-275">
+                    <desc>updated milestone 1.2.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -278,9 +281,7 @@
           <div type="chapter" xml:id="UT22084-091-064-section-1-1">
             <head type="chapter" tid="26">Chapter 1: The Introduction</head>
             <milestone unit="chunk" xml:id="UT22084-091-064-70"/>
-            <p tid="27">Thus did I hear at one time. In the sandalwood grove at the southeastern
-              charnel ground Aṭṭahāsa, in the palace called Joyous where a multitude of male and
-              female nonhuman beings gathered, the vināyaka Glorious Mahākāla was present. At the
+            <p tid="27">Thus did I hear at one time. At the southeastern charnel ground Aṭṭahāsa, in the sandalwood grove called Joyous, the vināyaka Glorious Mahākāla was present in the palace where a multitude of male and female nonhuman beings gathered. At the
               time,<note place="end" xml:id="UT22084-091-064-272">Following D: <foreign xml:lang="Bo-Ltn">de’i tshe</foreign>. S does not include this.</note> in the midst of a retinue of cruel beings, he was known as “Mahākāla Who
               Controls the Life Breath of Living Beings.” <ref cRef="F.199.b" type="folio" xml:id="UT22084-091-064-247"/>
             </p>
@@ -846,8 +847,8 @@
               mo</title>). Sarnath: Dictionary Unit, Central Institute of Higher Tibetan Studies,
             1993. </bibl>
           <bibl xml:id="UT22084-091-064-175">
-                        <title xml:lang="en">Resources for Kanjur &amp; Tenjur
-              Studies</title>, Universität Wien, accessed June 11, 2019. <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php">https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php</ref>.</bibl>
+                        <title xml:lang="en">Resources for Kanjur and Tanjur
+            Studies</title>, Universität Wien, accessed June 11, 2019. <ref target="http://www.rkts.org/">http://www.rkts.org</ref>.</bibl>
           <bibl xml:id="UT22084-091-064-176">
                         <title xml:lang="en">The Buddhist Canons Research
               Database</title>. American Institute of Buddhist Studies and Columbia University
@@ -1439,9 +1440,8 @@
               <term xml:lang="Bo-Ltn" status="verified" n="1">rab tu dga’ ba </term>
               <term xml:lang="bo" n="1">རབ་ཏུ་དགའ་བ།</term>
               <term xml:lang="Sa-Ltn" status="verified"/>
-              <note type="definition">
-                                <p>The name of a palace in the charnel ground
-                Aṭṭahāsa.</p>
+            <note type="definition">
+                                <p>The name of a sandalwood grove in the charnel ground Aṭṭahāsa.</p>
                             </note>
             </gloss>
                     </item>
