--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -13,14 +13,15 @@
                 <author role="translatorEng" xml:id="UT22084-061-009-2">Sophie McGrath</author>
                 <editor role="projectEditor" xml:id="UT22084-061-009-3">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-061-009-24">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-061-009-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +102,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-16T08:39:49.636Z" type="text-version" status="0.0.14" xml:id="UT22084-061-009-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-16T14:30:36.857Z" type="text-version" status="0.0.15" xml:id="UT22084-061-009-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-20T15:02:59.6Z" type="translation-status" status="2.b" xml:id="UT22084-061-009-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-20T15:02:59.6Z" type="text-version" status="0.0.16" xml:id="UT22084-061-009-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
