--- a/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
+++ b/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-006-465">Rory Lindsay</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -154,6 +154,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-20T14:57:07.091Z" type="text-version" status="1.0.5" xml:id="UT22084-090-006-476">
                     <desc>Added pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-20T16:16:15.865Z" type="text-version" status="1.0.6" xml:id="UT22084-090-006-477">
+                    <desc>updated typos.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -874,7 +877,7 @@
                                                 themselves in practice without resting at dawn or
                                                 dusk. In order to stop them, so that the pernicious
                                                 yakṣas without trust can gain trust, so that those
-                                                with trust can be increase their trust, and so that
+                                                with trust can increase their trust, and so that
                                                 the four communities can have well-being, <ref cRef="F.142.a" type="folio" xml:id="UT22084-090-006-410"/> dwell at ease, and
                                                 meditate well without exception, was ask you to
                                                 expound <title xml:lang="en">The Great Sūtra of Cool
@@ -2060,7 +2063,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-090-006-242"/>
                                         <p tid="217">The ritual procedure for this is as follows: A
                                                 person who eats the three white foods, has bathed
-                                                well, fasts, observes discipline, and a holds vast
+                                                well, fasts, observes discipline, and holds vast
                                                 intention should draw images of the Four Great Kings
                                                 using realgar or red ocher. <ref cRef="F.150.b" type="folio" xml:id="UT22084-090-006-427"/> They
                                                 should make a four-cornered maṇḍala that is replete
