--- a/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-005-992">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.13 <date>2023</date>
+                <edition>v 1.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -161,6 +161,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-20T15:10:03.279Z" type="text-version" status="1.0.13" xml:id="UT22084-090-005-1006">
                     <desc>Added pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-20T16:24:36.926Z" type="text-version" status="1.0.14" xml:id="UT22084-090-005-1007">
+                    <desc>Updated typo.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1723,7 +1726,7 @@
                         Blessed One. They magically appeared and approached him in many hideous
                         forms, terrifying to behold, while emitting cacophonous noises and wielding
                         the power specific to māras to create myriad miraculous appearances and rain
-                        down of many types of weapons. <ref cRef="F.130.b" type="folio" xml:id="UT22084-090-005-683"/> They surrounded the Blessed One on all
+                        down many types of weapons. <ref cRef="F.130.b" type="folio" xml:id="UT22084-090-005-683"/> They surrounded the Blessed One on all
                         four sides and began to create obstacles.
                         Vipula­praha­sita­vadanamaṇi­kanakaratnojjvalaraśmi­prabhāsābhyudgata­rāja
                         remained silent for a moment as he mentally repeated the queen of
