--- a/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-043-010-35">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.14 <date>2023</date>
+                <edition>v 0.1.15 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-043-010"/>
                 <date/>
             </publicationStmt>
@@ -113,6 +113,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-13T11:58:15.564Z" type="text-version" status="0.1.14" xml:id="UT22084-043-010-38">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-23T08:40:21.492Z" type="translation-status" status="2.a" xml:id="UT22084-043-010-39">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-23T08:40:21.492Z" type="text-version" status="0.1.15" xml:id="UT22084-043-010-40">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
