--- a/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
+++ b/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Samādhi of the Four Youths</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caturdārakasamādhisūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Caturdārakasamādhisūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">khye'u bzhi'i ting nge 'dzin gyi mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryacaturdārakasamādhi­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryacaturdārakasamādhi­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khye'u bzhi'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《四童子三昧經》</title>
                 <author role="translatorMain" xml:id="UT22084-056-004-1">Dharmachakra Translation Committee</author>
@@ -21,12 +21,12 @@
                 <sponsor xml:id="UT22084-056-004-8">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-056-004"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +101,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-02T09:36:21.146Z" type="text-version" status="0.0.14" xml:id="UT22084-056-004-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-23T11:43:06.034Z" type="translation-status" status="2.c" xml:id="UT22084-056-004-37">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-23T11:43:06.034Z" type="text-version" status="0.0.15" xml:id="UT22084-056-004-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
